[project]
name = "run-in-container"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
run-in-container = "run_in_container.run_in_container:run_in_container"
uvc = "run_in_container.uvc:main"
testc = "run_in_container.testc"

[tool.run_in_container]
container_template_name = "split_genome"
#dir_mounts = [["/some/dir/", "/path/in/container"]]
#share_uv_cache = true
#container_venv_in_host = ".venv_container"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"